<resources>
    <string name="app_name">Tracking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sender_approve">สร้างคำขออนุมัติ</string>
    <color name="bg_main">#d408be62</color>
    <string name="profile">Edit Profile</string>
    <string name="senddoc">Send Document</string>
    <string name="user_id">เรื่อง :</string>
    <string name="name">เนื้อหา :</string>
    <string name="email">Email :</string>
    <string name="logout">Logout</string>
    <string name="confirm_gps">Confirm Pos</string>
    <string name="username">ชื่อผู้ใช้งาน</string>
    <string name="urlchecklogin">http://dts.zerother.com/checklogin.php</string>
    <color name="text_menu">#424242</color>
    <color name="txtgreen">#d4086000</color>
    <string name="accept">ได้รับอนุมัติ</string>
    <string name="disaccept">ไม่อนุมัติ</string>
    <string name="markgps">ระบุตำแหน่งงาน</string>
    <string name="license">สงวนลิขสิทธิ์ \n โดย zgadgetit@zerother version Beta 1.0</string>
    <string name="contact">รายชื่อ :</string>
    <string name="worker_n">ชื่อผู้ปฏิบัติงาน</string>
    <color name="bg_green_new">#4CAF50</color>
    <color name="bg_tab">#BDBDBD</color>
</resources>
