<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.zerother.zero.tracking.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile" android:title="@string/profile"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_send" android:title="@string/senddoc"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/action_cfm_gps" android:title="@string/confirm_gps"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never"/>

</menu>
